# ai-workflow-core

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml
docs/: PRD.md  TESTING_GUIDE.md  architecture.md
outputs/: kpi.md  prd.md  research.md  tasks.md
src/: controller.py  main.py
src/agents/: kpi_agent.py  prd_agent.py  research_agent.py  task_agent.py
src/utils/: config.py  helpers.py  llm.py  prompts.py  schemas.py
tests/: test_controller.py
